Removed height from app to fix buggy scrolling on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,4 @@
 .app {
-    height: 100vh;
 
     .sections {
         width: 100%;
@@ -12,7 +11,6 @@
 
         > *{
             width: 100%;
-            scroll-snap-align: start; 
         }
     }
 }
